--- a/QuanLyNhaHang/app/src/main/res/layout/dialog_sale.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/dialog_sale.xml
@@ -58,7 +58,7 @@
             android:background="@drawable/btn_radius"
             android:text="Đồng ý"
             android:textAllCaps="false"
-            android:textColor="@color/colorTextButton" />
+            android:textColor="@color/white" />
 
         <Button
             android:id="@+id/btn_cancle"
@@ -69,6 +69,6 @@
             android:background="@drawable/btn_radius"
             android:text="Hủy"
             android:textAllCaps="false"
-            android:textColor="@color/colorTextButton" />
+            android:textColor="@color/white" />
     </TableRow>
 </LinearLayout>
