--- a/QuanLyNhaHang/app/src/main/res/layout/item_thuc_don_order.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/item_thuc_don_order.xml
@@ -29,7 +29,7 @@
         android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:text="5 ly"
-        android:textColor="@color/colorTextThongTinBan"
+        android:textColor="@color/colorTextInfo"
         android:textSize="11sp" />
 
     <TextView
@@ -37,7 +37,7 @@
         android:layout_width="52dp"
         android:layout_height="wrap_content"
         android:text="1k"
-        android:textColor="@color/colorTextTongTien"
+        android:textColor="@color/colorTextMoney"
         android:textSize="11sp"
         android:textStyle="italic" />
 
