--- a/QuanLyNhaHang/app/src/main/res/layout-land/dialog_error.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/dialog_error.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/error"
-        android:textColor="@color/colorTextNameBan"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -20,7 +20,7 @@
         android:text="@string/gap_loi"
         android:gravity="center"
         android:paddingTop="16dp"
-        android:textColor="@color/colorTextThongTinBan"
+        android:textColor="@color/colorTextInfo"
         android:textSize="14sp"
         android:textStyle="bold" />
 
@@ -31,12 +31,11 @@
 
         <Button
             android:id="@+id/btn_ok"
+            style="@style/CommonButton"
             android:layout_width="0dp"
             android:layout_height="32dp"
             android:layout_weight="1"
             android:background="@drawable/btn_radius"
-            android:text="@string/tai_lai"
-            android:textAllCaps="false"
-            android:textColor="@color/colorTextButton" />
+            android:text="@string/tai_lai"/>
     </TableRow>
 </LinearLayout>
