--- a/QuanLyNhaHang/app/src/main/res/layout-land/dialog_order_thuc_don.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/dialog_order_thuc_don.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bàn 12"
-        android:textColor="@color/colorTextNameBan"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -20,7 +20,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Caffe"
+        android:isScrollContainer="true"
+        android:maxLines="2"
+        android:scrollbars="vertical"
+        android:text="Coffee"
         android:textColor="@color/colorTextTenMon"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -51,8 +54,8 @@
             android:gravity="center_horizontal"
             android:inputType="number"
             android:lines="1"
-            android:text="15"
             android:maxLength="3"
+            android:text="15"
             android:textColor="@color/colorTextTitleDialog"
             android:textSize="16sp" />
 
@@ -61,6 +64,8 @@
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:text="miếng"
+            android:isScrollContainer="true"
+            android:scrollbars="horizontal"
             android:textColor="@color/colorTextTenMon"
             android:textSize="12sp" />
 
@@ -75,27 +80,25 @@
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="16dp">
+        android:paddingTop="@dimen/margin">
 
         <Button
             android:id="@+id/btn_ok"
+            style="@style/CommonButton"
             android:layout_width="0dp"
             android:layout_height="32dp"
             android:layout_weight="1"
             android:background="@drawable/btn_radius"
-            android:text="Đồng ý"
-            android:textAllCaps="false"
-            android:textColor="@color/colorTextButton" />
+            android:text="@string/dong_y"/>
 
         <Button
             android:id="@+id/btn_cancle"
+            style="@style/CommonButton"
             android:layout_width="0dp"
             android:layout_height="32dp"
             android:layout_marginLeft="16dp"
             android:layout_weight="1"
             android:background="@drawable/btn_radius"
-            android:text="Hủy"
-            android:textAllCaps="false"
-            android:textColor="@color/colorTextButton" />
+            android:text="@string/huy"/>
     </TableRow>
 </LinearLayout>
