--- a/QuanLyNhaHang/app/src/main/res/layout-land/fragment_home.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/fragment_home.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/home_background"
-    tools:context=".phucVuView.fragment.HomeFragment">
+    android:background="@drawable/home_background">
 
 
 
