--- a/QuanLyNhaHang/app/src/main/res/layout-land/fragment_phuc_vu.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/fragment_phuc_vu.xml
@@ -1,5 +1,4 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,16 +9,15 @@
         android:layout_height="match_parent"
         android:background="@color/colorBackgroudMain"
         android:orientation="horizontal"
-        android:padding="5dp">
+        android:padding="@dimen/layout_padding">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="@dimen/layout_padding"
             android:layout_weight="2.9"
             android:background="@color/colorBackgroudSesion"
-            android:orientation="vertical"
-            android:padding="5dp">
+            android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/list_ban"
@@ -54,12 +52,10 @@
                             android:background="@drawable/table_button_background_serving" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            style="@style/CommonTextView"
                             android:paddingLeft="12dp"
                             android:text="Đang phục vụ"
-                            android:textColor="#111111"
-                            android:textSize="11sp" />
+                            android:textColor="@color/black" />
                     </TableRow>
 
                     <TableRow
@@ -73,12 +69,10 @@
                             android:background="@drawable/table_button_background_reserved" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            style="@style/CommonTextView"
                             android:paddingLeft="12dp"
-                            android:text="Đặt trước"
-                            android:textColor="#111111"
-                            android:textSize="11sp" />
+                            android:text="@string/dat_truoc"
+                            android:textColor="@color/black" />
                     </TableRow>
 
                     <TableRow
@@ -92,12 +86,10 @@
                             android:background="@drawable/table_button_background_free" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            style="@style/CommonTextView"
                             android:paddingLeft="12dp"
-                            android:text="Trống"
-                            android:textColor="#111111"
-                            android:textSize="11sp" />
+                            android:text="@string/trong"
+                            android:textColor="@color/black" />
                     </TableRow>
                 </LinearLayout>
 
@@ -114,7 +106,7 @@
             android:layout_weight="3"
             android:background="@color/colorBackgroudSesion"
             android:orientation="vertical"
-            android:padding="5dp">
+            android:padding="@dimen/layout_padding">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -130,14 +122,16 @@
                     android:id="@+id/tv_ten_ban"
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="58dp"
+                    android:isScrollContainer="true"
+                    android:lines="2"
+                    android:paddingLeft="@dimen/margin"
+                    android:scrollbars="vertical"
                     android:text="Bàn 15"
-                    android:textColor="@color/colorTextNameBan"
+                    android:textColor="@color/colorTextField"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/btn_thuc_don"
                     android:layout_width="47dp"
                     android:layout_height="28dp"
@@ -150,22 +144,17 @@
                 android:gravity="center_vertical">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/CommonTextView"
                     android:text="@string/trang_thai"
-                    android:textColor="@color/colorTextThongTinBan"
-                    android:textSize="12sp"
+                    android:textColor="@color/colorTextField"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_trang_thai"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="16dp"
+                    style="@style/CommonTextView"
+                    android:paddingLeft="@dimen/margin"
                     android:text="@string/trong"
-                    android:textColor="@color/colorTextInfo"
-                    android:textSize="12sp"
-                    android:textStyle="normal" />
+                    android:textColor="@color/colorTextInfo"/>
             </TableRow>
 
             <include
