--- a/QuanLyNhaHang/app/src/main/res/layout-land/item_dat_ban.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/item_dat_ban.xml
@@ -25,7 +25,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="04:13 AM - 05/03/2017"
-        android:textColor="@color/colorTextThongTinBan"
+        android:textColor="@color/colorTextInfo"
         android:textSize="11sp" />
 
     <ImageButton
