--- a/QuanLyNhaHang/app/src/main/res/layout/activity_login.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/activity_login.xml
@@ -5,10 +5,9 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".phucVuView.activity.LoginActivity">
+    android:paddingLeft="@dimen/margin"
+    android:paddingRight="@dimen/margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <!-- Login progress -->
     <ProgressBar
