--- a/QuanLyNhaHang/app/src/main/res/layout/dialog_delete_thuc_don_order.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/dialog_delete_thuc_don_order.xml
@@ -40,7 +40,7 @@
             android:background="@drawable/btn_radius"
             android:text="Đồng ý"
             android:textAllCaps="false"
-            android:textColor="@color/colorTextButton" />
+            android:textColor="@color/white" />
 
         <Button
             android:id="@+id/btn_cancle"
@@ -51,6 +51,6 @@
             android:background="@drawable/btn_radius"
             android:text="Hủy"
             android:textAllCaps="false"
-            android:textColor="@color/colorTextButton" />
+            android:textColor="@color/white" />
     </TableRow>
 </LinearLayout>
