--- a/QuanLyNhaHang/app/src/main/res/layout/dialog_tinh_tien.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/dialog_tinh_tien.xml
@@ -34,7 +34,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="@string/tien_mon"
-            android:textColor="@color/colorTextThongTinBan"
+            android:textColor="@color/colorTextInfo"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="150K"
-            android:textColor="@color/colorTextTongTien"
+            android:textColor="@color/colorTextMoney"
             android:textSize="18sp"
             android:textStyle="italic" />
 
@@ -69,7 +69,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="@string/tien_giam_gia"
-            android:textColor="@color/colorTextThongTinBan"
+            android:textColor="@color/colorTextInfo"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -78,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="25k"
-            android:textColor="@color/colorTextTongTien"
+            android:textColor="@color/colorTextMoney"
             android:textSize="18sp"
             android:textStyle="italic" />
 
@@ -117,7 +117,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="@string/tong_tien"
-            android:textColor="@color/colorTextThongTinBan"
+            android:textColor="@color/colorTextInfo"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -126,7 +126,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="125k"
-            android:textColor="@color/colorTextTongTien"
+            android:textColor="@color/colorTextMoney"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -152,7 +152,7 @@
             android:layout_height="wrap_content"
             android:paddingRight="16dp"
             android:text="@string/tien_tra_lai"
-            android:textColor="@color/colorTextThongTinBan"
+            android:textColor="@color/colorTextInfo"
             android:textSize="16sp"
             android:textStyle="italic" />
 
@@ -161,7 +161,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="25k"
-            android:textColor="@color/colorTextTongTien"
+            android:textColor="@color/colorTextMoney"
             android:textSize="18sp"
             android:textStyle="italic" />
 
@@ -180,7 +180,7 @@
             android:background="@drawable/btn_radius"
             android:text="Đồng ý"
             android:textAllCaps="false"
-            android:textColor="@color/colorTextButton" />
+            android:textColor="@color/white" />
 
         <Button
             android:id="@+id/btn_cancle"
@@ -191,6 +191,6 @@
             android:background="@drawable/btn_radius"
             android:text="Hủy"
             android:textAllCaps="false"
-            android:textColor="@color/colorTextButton" />
+            android:textColor="@color/white" />
     </TableRow>
 </LinearLayout>
