--- a/QuanLyNhaHang/app/src/main/res/layout/fragment_phuc_vu.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/fragment_phuc_vu.xml
@@ -153,7 +153,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/trang_thai"
-                    android:textColor="@color/colorTextThongTinBan"
+                    android:textColor="@color/colorTextInfo"
                     android:textSize="12sp"
                     android:textStyle="bold" />
 
