--- a/QuanLyNhaHang/app/src/main/res/layout/item_nhom_mon.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/item_nhom_mon.xml
@@ -10,6 +10,6 @@
         android:background="#884b00"
         android:gravity="center"
         android:text="Caffe"
-        android:textColor="@color/colorTextButton"
+        android:textColor="@color/white"
         android:textStyle="bold" />
 </LinearLayout>
